#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([plusaes], [0.0.1], [kk.ayataka@gmail.com])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_HEADER([config.h])


# Checks for programs.
: ${CXXFLAGS=-Wall -O2}
AC_PROG_CC
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 unit_test/Makefile])
AC_OUTPUT
